--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-suspense",
+  "name": "suspense-use",
   "version": "1.0.0",
   "main": "lib/index.js",
   "module": "es/index.js",
